@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.7 1999/10/22 18:12:26 tiniou Exp $
+$Id: THANKS,v 1.8 1999/11/11 16:13:57 tiniou Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -22,6 +22,7 @@ Thanks to people who reported problems with the port, sent patches, and
 suggested various improvements.
 Here is a partial list of them (if I have forgotten someone, please complain):
 
+Stephen Carr		sgcarr@civeng.adelaide.edu.au
 Abhijit Dasgupta	abhijit@ans.net
 Eirik Fuller		eirik@netcom.com
 Henry Katz		hkatz@hkatz.dialup.access.net
@@ -34,6 +35,8 @@ David Monro		davidm@cs.su.oz.au
 Lukas Nellen		L.Nellen@ThPhys.Uni-Heidelberg.DE
 Nuno Oliveira		nuno@eq.uc.pt
 Brent Olson		night@halcyon.com
+Bernhard Sadlowski	sadlowsk@Mathematik.Uni-Bielefeld.DE
+Chris Siebenmann	cks@utcc.utoronto.ca
 Bob Snyder		rsnyder@janet.advsys.com
 Stephen Tweedie		sct@dcs.ed.ac.uk
 Daniel Veillard		Daniel.Veillard@imag.fr
